--- a/src/main/resources/poker/main-view.fxml
+++ b/src/main/resources/poker/main-view.fxml
@@ -3,14 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="cs112.ud3.HelloController">
+      >
+<!--    fx:controller="cs112.ud2.HelloController"-->
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+<!--    <Button text="Hello!" onAction="#onHelloButtonClick"/>-->
 </VBox>
